- risolto un problema nella rigenerazione layout al cambio di variabili - risolto un poblema in handling di mxp.ts - fatto piu coerente il look di elementi disabled nei menu

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -2647,7 +2647,7 @@ NO TITLE WINDOW
     overflow: visible;
 }
 .disabled{
-    color: lightgray;
+    opacity: 0.3 !important;
 }
 
 #electronMenu {
